# fluid-gpu

./: .gitignore  README.md  pyproject.toml  setup.py
benchmarks/: .gitignore  benchmark_cuda_vs_torch.py  benchmark_results.csv  results.txt  visualize_benchmark.py  visualize_solver.py
fluidgpu/: __init__.py  _solver.c  _solver.cu  _wrapper.cu  burgers_solver.cuh  vector_add.cuh
fluidgpu_torch/: __init__.py  burgers_solver_torch.py
presentation/: index.html
tests/: test.py  test_torch.py
