[project]
name = "fluid-gpu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "setuptools>=80.9.0",
    "torch>=2.9.1",
]

[tool.uv.extra-build-dependencies]
fluid-gpu = ["numpy"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true